k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: default
  labels:
    app: react-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: react-app
